# firecrawl-docling-RAG-APP

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  test_incremental_ingestion.py
backend/agents/: agent.py  retrieval.py  router.py  schema.py
backend/eval/: questions.json  run_eval.py
backend/ingestion/: ingestion.py  models.py  router.py  schema.py
backend/persistence/: message.py
backend/shared/: __init__.py  config.py  embeddings.py  logger.py  sql_client.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/src/: config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/source/: page.tsx
frontend/src/services/: api.ts
frontend/src/utils/: logger.ts
infrastructure/: .env.example  docker-compose.yml
infrastructure/firecrawl/: .env.example  docker-compose.yml
scripts/: export_kb.sh  import_kb.sh
